@startuml

skinparam classAttributeIconSize 0

class SpendingTracker {
    -port: BankAccountPort
    -from: LocalDate
    -to: LocalDate
    +showReport(): void
}

interface BankAccountPort {
    +getTransactions(from: LocalDate, to: LocalDate): List~Transaction~
    +getAccountInfo(from: LocalDate, to: LocalDate): Account
}

class FioAdapter implements BankAccountPort {
    -fioApi: BankApiClient
    -rowMapper: RowMapper~Transaction~
    -cachedData: BankApiResponse
    -cachedFrom: LocalDate
    -cachedTo: LocalDate
    -getFioData(from: LocalDate, to: LocalDate): BankApiResponse
    +getTransactions(from: LocalDate, to: LocalDate): List~Transaction~
    -getAccountData(): BankApiResponse
}

interface BankApiClient {
    + fetchAccountData(from: LocalDate, to: LocalDate): BankApiResponse
}

class FioApiClient {
    - {static} BASE_URL: String
    - {static} DATE_FORMAT: DateTimeFormatter
    - token: String
    - httpClient: HttpClient
    - objectMapper: ObjectMapper

    + FioApiClient(token: String)
    + fetchAccountData(from: LocalDate, to: LocalDate): BankApiResponse
    - fetch(from: LocalDate, to: LocalDate): String
    - parseTransactions(accountStatement: JsonNode): List<Map<String, Object>>
    - parseAccountInfo(accountStatement: JsonNode): Account
}

class HttpClient


class Account {
    -accountId: String,
    -bankId: String,
    -iban: String
    -currency: Currency,
    -balance: BigDecimal
    -transactions: List~Transaction~
    +addTransaction(t: Transaction): void
    +getTransactions(): List~Transaction~
    +totalSpending(): BigDecimal
    +totalIncome(): BigDecimal
    +getAccountNumber(): String
}

record BankApiResponse {
    -accountInfo: Account
    -rawTransactions: List~Map~String, Object~~
}


interface RowMapper {
    +map(row: Map~String, Object~): T
}

abstract class Transaction {
    -id: long
    -date: LocalDateTime
    -amount: BigDecimal
    -currency: Currency
    -accountId: String
    -sourceBankId: String
    -merchantName: String
    -message: String
    -type: String
    -description: String
    +{abstract}isExpense(): boolean
    +{abstract}getSummary(): String
    #formatSummary(type: String, extra: String): String
    #{static} requirePositive(amount: BigDecimal): BigDecimal
    #{static} requireNegative(amount: BigDecimal): BigDecimal
}

class SpendingTransaction extends Transaction {
    +isExpense(): boolean
    +getSummary(): String
}

class IncomingTransaction extends Transaction {
    +isExpense(): boolean
    +getSummary(): String
    +isConfirmed(): boolean
}


enum Currency {
    CZK
    EUR
    USD
    UNKNOWN
}

enum Category {
    GROCERIES
    LOANS
    SUBSCRIPTIONS
    RESTAURANTS
    DRUG_STORE
    HOME_FACILITIES
    CLOTHES
    KIDS_HOBBIES
    PRESENTS
    HOLIDAYS
    PARTY
    GARDEN_STUFF,
    INCOME,
    OTHER
}


SpendingTracker o-- BankAccountPort : port

BankAccountPort ..> Transaction : returns

FioAdapter .up.|> BankAccountPort
FioAdapter o-- BankApiClient
FioAdapter .right.> RowMapper : uses
FioAdapter ..> BankApiResponse : caches

Account *-- Transaction

Transaction --> Currency

SpendingTransaction --> Category

FioApiClient *-- HttpClient
BankApiClient <|.. FioApiClient

BankApiClient ..> BankApiResponse : returns

BankApiResponse --> Account : contains

@enduml